Add service and controller methods with detailed Javadoc annotations
Refactored service and controller layers to include detailed methods for handling fire station coverage, child alerts, fire incidents, and flood-related responses. Enhanced testing with parameter formatting and added Javadoc annotations for improved code clarity and API documentation.